[gd_scene load_steps=6 format=3 uid="uid://dhp4j3x9k7lq2"]

[ext_resource type="Script" path="res://scripts/ui/pregame_setup.gd" id="1_pregame"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.2, 0.3, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.3, 0.5, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.8, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.15, 0.25, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus"]
bg_color = Color(0.4, 0.6, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="PreGameSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pregame")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16, 0.18, 0.22, 1)

[node name="PatternOverlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -400.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.86, 0.94, 1, 1)
theme_override_font_sizes/font_size = 42
text = "LABORATORY CONFIGURATION"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.78, 0.86, 1)
theme_override_font_sizes/font_size = 18
text = "Initialize Research Parameters & Operating Procedures"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="FieldsContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PlayerNameRow" type="VBoxContainer" parent="Panel/VBox/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/VBox/FieldsContainer/PlayerNameRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Player Name:"

[node name="LineEdit" type="LineEdit" parent="Panel/VBox/FieldsContainer/PlayerNameRow"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your name..."
max_length = 30

[node name="LabNameRow" type="VBoxContainer" parent="Panel/VBox/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LabelRow" type="HBoxContainer" parent="Panel/VBox/FieldsContainer/LabNameRow"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/FieldsContainer/LabNameRow/LabelRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Lab Name:"

[node name="RandomButton" type="Button" parent="Panel/VBox/FieldsContainer/LabNameRow/LabelRow"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
tooltip_text = "Generate random lab name"
theme_override_font_sizes/font_size = 16
text = "ðŸŽ²"

[node name="LineEdit" type="LineEdit" parent="Panel/VBox/FieldsContainer/LabNameRow"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter lab name..."
max_length = 30

[node name="SeedRow" type="VBoxContainer" parent="Panel/VBox/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/VBox/FieldsContainer/SeedRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Experimental Seed (Optional):"

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/FieldsContainer/SeedRow"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="Panel/VBox/FieldsContainer/SeedRow/HBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
placeholder_text = "Leave empty for weekly challenge seed..."

[node name="WeeklyButton" type="Button" parent="Panel/VBox/FieldsContainer/SeedRow/HBox"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Weekly"

[node name="InfoLabel" type="Label" parent="Panel/VBox/FieldsContainer/SeedRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Use custom seed for reproducible games or compete on weekly challenge"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox/FieldsContainer"]
layout_mode = 2

[node name="DifficultyRow" type="VBoxContainer" parent="Panel/VBox/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/VBox/FieldsContainer/DifficultyRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Research Intensity:"

[node name="OptionButton" type="OptionButton" parent="Panel/VBox/FieldsContainer/DifficultyRow"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 20
selected = 1
item_count = 3
popup/item_0/text = "Easy (Conservative)"
popup/item_1/text = "Standard (Regulatory)"
popup/item_1/id = 1
popup/item_2/text = "Hard (Aggressive)"
popup/item_2/id = 2

[node name="Spacer" type="Control" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LaunchButton" type="Button" parent="Panel/VBox/ButtonRow"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_focus")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "â–¶ INITIALIZE LAB"

[node name="CancelButton" type="Button" parent="Panel/VBox/ButtonRow"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "Cancel"

[connection signal="text_changed" from="Panel/VBox/FieldsContainer/PlayerNameRow/LineEdit" to="." method="_on_player_name_changed"]
[connection signal="pressed" from="Panel/VBox/FieldsContainer/LabNameRow/LabelRow/RandomButton" to="." method="_on_random_lab_name_pressed"]
[connection signal="text_changed" from="Panel/VBox/FieldsContainer/LabNameRow/LineEdit" to="." method="_on_lab_name_changed"]
[connection signal="text_changed" from="Panel/VBox/FieldsContainer/SeedRow/HBox/LineEdit" to="." method="_on_seed_changed"]
[connection signal="pressed" from="Panel/VBox/FieldsContainer/SeedRow/HBox/WeeklyButton" to="." method="_on_weekly_seed_pressed"]
[connection signal="item_selected" from="Panel/VBox/FieldsContainer/DifficultyRow/OptionButton" to="." method="_on_difficulty_selected"]
[connection signal="pressed" from="Panel/VBox/ButtonRow/LaunchButton" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="Panel/VBox/ButtonRow/CancelButton" to="." method="_on_cancel_pressed"]
